# GogolWriter

./: CMakeLists.txt  main.cpp
.qt/: QtDeploySupport.cmake
controller/: controller.cpp  controller.h
model/: model.cpp  model.h
resources/styles/: MainStyle.h  ProjectStyle.h
view/MainWindow/: MainWindow.cpp  MainWindow.h
view/ProjectWindow/: ProjectWindow.cpp  ProjectWindow.h
view/tools/: MarkdownEditor.cpp  MarkdownEditor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h
